overflow boder issue fixed

--- a/src/styles/card-styles.scss
+++ b/src/styles/card-styles.scss
@@ -1,6 +1,7 @@
 @import 'variables.scss';
 
 .card-container {
+  overflow: hidden;
   background-color: $color-white;
   width: fit-content;
   border-radius: 1.5rem;
